--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,14 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.14.1</version>
+        </dependency>
     </dependencies>
+
+
     <build>
         <plugins>
             <plugin>
